[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Everett Caldwell <everett@gocouchly.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
